sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var c:Int;
      ^AlgBubbleSort3:4: error: local variables must be initialized
  var c:Int;
      ^